removed fire references in swag spec
