# api-spec.yaml
@@ -65,12 +65,11 @@ paths:
             operationId: runNewScenario
 
             parameters:
-                - name: fire_geometry
+                - name: vegetation_updates
                   type: object
-                  in: body
-                  description: 
-                      <a href="http://geojson.org/geojson-spec.html#id7">GeoJSON 
-                      Multipolygon</a> of the fire area(s)</a>
+                  schema:
+                      $ref: "#/definitions/VegetationUpdate"
+                      
 
             responses:
                 200:
@@ -165,17 +164,12 @@ definitions:
                 type: string
                 format: date-time
                 description: auto-generated by server when scenario model has finished
-            fire_geometry:
+            veg_map_by_hru:
                 type: object
-                description:
-                    <a href="http://geojson.org/geojson-spec.html#id7">GeoJSON 
-                    Multipolygon</a> of the fire area(s)
-            total_fire_area:
-                type: float
-                description:
-                    total calculated area of the fire_geometry 
-                    <a href="http://geojson.org/geojson-spec.html#id7">GeoJSON 
-                    Multipolygon</a> of the fire area(s)
+                description: object with hru indices in array by vegetation code (0-4)
+                schema:
+                    type:
+                        $ref: "#/definitions/VegMapByHRU"
             inputs:
                 type: object
                 description: download links to control, data, and parameter files for scenario
@@ -269,6 +263,16 @@ definitions:
                 
     CellsByVegType:
         properties:
+            HRU_number:
+                type: array
+                items:
+                    type: integer
+
+    VegetationUpdate:
+        properties:
+            cov_type_code:
+                type: integer
+                description: PRMS vegetation code (0-4)
             HRU_number:
                 type: array
                 items:
